paperless/service.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless-svc
  namespace: paperless
spec:
  selector:
    app: paperless
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 8000
